--- a/financial_independence/index.html
+++ b/financial_independence/index.html
@@ -1,6 +1,7 @@
 ---
-layout: page
-title: About
+layout: single
+title: Financial Independence
+author_profile: true
 permalink: /financial_independence/
 ---
 
