change layout to home

--- a/financial_independence/index.html
+++ b/financial_independence/index.html
@@ -1,8 +1,7 @@
 ---
-layout: single
+layout: home
 title: Financial Independence
 author_profile: true
-permalink: /financial_independence/
 ---
 
 About myself.
