--- a/data_analytics/index.html
+++ b/data_analytics/index.html
@@ -1,7 +1,15 @@
 ---
-layout: home
-title: Data Analytics
+layout: archive
+permalink: /data_analytics/
 author_profile: true
 ---
 
-About myself.
+{% include group-by-array collection=site.posts field="categories" %}
+
+{% for category in group_names %}
+  {% assign posts = group_items[forloop.index0] %}
+  <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
+  {% for post in posts %}
+    {% include archive-single.html %}
+  {% endfor %}
+{% endfor %}
