--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 ---
-layout: home
-author_profile: true
+layout: splash
+header:
+  overlay_image: /assets/posts/2017-07-16-hello-world/toe-flowers.jpg
+  caption: "Photo credit: [**Unsplash**](https://cdn.shopify.com)"
 ---
