--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ---
 layout: splash
 header:
-  overlay_image: /assets/posts/2017-07-16-hello-world/toe-flowers.jpg
-  caption: "Photo credit: [**Unsplash**](https://cdn.shopify.com)"
+  overlay_image: /assets/images/main.jpg
 ---
