Add landing page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 ---
 layout: splash
 header:
-  overlay_image: /assets/images/main.jpg
+  image: /assets/images/main.jpg
+  caption: "Photo credit: [**wallpapersite**]"
+  exerpt: ""
+  cta_label: "Home"
+  cta_url: "/home/index.html"
 ---
