Add landing page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: splash
 header:
   image: /assets/images/main.jpg
   caption: "Photo credit: [**wallpapersite**]"
-  exerpt: ""
+  exerpt: "Yet another blog"
   cta_label: "Home"
   cta_url: "/home/index.html"
 ---
