--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: splash
 header:
-  image: /assets/images/main.jpg
+  overlay_image: /assets/images/main.jpg
+  overlay_filter: 0.5
   caption: "Photo credit: [**wallpapersite**]"
 ---
 
