--- a/dating/index.html
+++ b/dating/index.html
@@ -8,8 +8,10 @@ author_profile: true
 
 {% for category in group_names %}
   {% assign posts = group_items[forloop.index0] %}
-  <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
-  {% for post in posts %}
-    {% include archive-single.html %}
-  {% endfor %}
+    {% if category == dating %}
+      <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
+      {% for post in posts %}
+        {% include archive-single.html %}
+      {% endfor %}
+    {% endif %}
 {% endfor %}
