--- a/random/index.html
+++ b/random/index.html
@@ -7,11 +7,12 @@ author_profile: true
 {% include group-by-array collection=site.posts field="categories" %}
 
 {% for category in group_names %}
-  {% assign posts = group_items[forloop.index0] %}
-  	{% if category == dating %}
+	{% if category == random %}
+	  {% assign posts = group_items[forloop.index0] %}
+	  	{% if category == dating %}
 	  <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
 	  {% for post in posts %}
 	    {% include archive-single.html %}
 	  {% endfor %}
-	{% endif %}  
+	{% endif %}
 {% endfor %}
