--- a/dating/index.html
+++ b/dating/index.html
@@ -7,11 +7,11 @@ author_profile: true
 {% include group-by-array collection=site.posts field="categories" %}
 
 {% for category in group_names %}
-  {% assign posts = group_items[forloop.index0] %}
-    {% if category == dating %}
+    {% if category === dating %}
+      {% assign posts = group_items[forloop.index0] %}
       <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
       {% for post in posts %}
-        {% include archive-single.html %}
+          {% include archive-single.html %}
       {% endfor %}
     {% endif %}
 {% endfor %}
