--- a/random/index.html
+++ b/random/index.html
@@ -7,7 +7,7 @@ author_profile: true
 {% include group-by-array collection=site.posts field="categories" %}
 
 {% for category in group_names %}
-	{% if category == random %}
+	{% if category === random %}
 	  {% assign posts = group_items[forloop.index0] %}
 	  	{% if category == dating %}
 	  <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
