--- a/dating/index.html
+++ b/dating/index.html
@@ -7,7 +7,7 @@ author_profile: true
 {% include group-by-array collection=site.posts field="categories" %}
 
 {% for category in group_names %}
-    {% if category === dating %}
+    {% if category === "dating" %}
       {% assign posts = group_items[forloop.index0] %}
       <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
       {% for post in posts %}
