--- a/data_analytics/index.html
+++ b/data_analytics/index.html
@@ -2,14 +2,19 @@
 layout: archive
 permalink: /data_analytics/
 author_profile: true
+header:
+  overlay_image: /data_analytics/data.jpg
+  caption: "Photo credit: [**gamesdeveloper.today**]"
 ---
 
 {% include group-by-array collection=site.posts field="categories" %}
 
 {% for category in group_names %}
-  {% assign posts = group_items[forloop.index0] %}
-  <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
-  {% for post in posts %}
-    {% include archive-single.html %}
-  {% endfor %}
+  {% if category == "data_analytics" %}
+    {% assign posts = group_items[forloop.index0] %}
+    <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
+    {% for post in posts %}
+      {% include archive-single.html %}
+    {% endfor %}
+  {% endif %}
 {% endfor %}
