--- a/dating/index.html
+++ b/dating/index.html
@@ -2,6 +2,9 @@
 layout: archive
 permalink: /dating/
 author_profile: true
+header:
+  overlay_image: /dating/dating.jpg
+  caption: "Photo credit: [**gamesdeveloper.today**]"
 ---
 
 {% include group-by-array collection=site.posts field="categories" %}
