Add image for categories

--- a/financial_independence/index.html
+++ b/financial_independence/index.html
@@ -2,6 +2,9 @@
 layout: archive
 permalink: /financial_independence/
 author_profile: true
+header:
+  overlay_image: /financial_independence/finance.jpg
+  caption: "Photo credit: [**baystreet**]"
 ---
 
 {% include group-by-array collection=site.posts field="categories" %}
