--- a/photography/index.html
+++ b/photography/index.html
@@ -2,6 +2,8 @@
 layout: archive
 permalink: /photography/
 author_profile: true
+header:
+  overlay_image: /photography/photography.jpg
 ---
 
 <div class="grid__wrapper">
