--- a/random/index.html
+++ b/random/index.html
@@ -2,6 +2,9 @@
 layout: archive
 permalink: /random/
 author_profile: true
+header:
+  overlay_image: /random/random.jpg
+  caption: "Photo credit: [**nelson**]"
 ---
 
 {% include group-by-array collection=site.posts field="categories" %}
