Add image for categories

--- a/random/index.html
+++ b/random/index.html
@@ -3,7 +3,7 @@ layout: archive
 permalink: /random/
 author_profile: true
 header:
-  overlay_image: /random/random.jpg
+  image: /random/random.jpg
   caption: "Photo credit: [**nelson**]"
 ---
 
