Add image for categories

--- a/data_analytics/index.html
+++ b/data_analytics/index.html
@@ -3,7 +3,7 @@ layout: archive
 permalink: /data_analytics/
 author_profile: true
 header:
-  image: /data_analytics/data.jpg
+  overlay_image: /data_analytics/data.jpg
   caption: "Photo credit: [**gamesdeveloper.today**]"
 ---
 
