--- a/dating/index.html
+++ b/dating/index.html
@@ -3,7 +3,7 @@ layout: archive
 permalink: /dating/
 author_profile: true
 header:
-  image: /dating/dating.jpg
+  overlay_image: /dating/dating.jpg
   caption: "Photo credit: [**gamesdeveloper.today**]"
 ---
 
