--- a/financial_independence/index.html
+++ b/financial_independence/index.html
@@ -3,7 +3,7 @@ layout: archive
 permalink: /financial_independence/
 author_profile: true
 header:
-  image: /financial_independence/finance.jpg
+  overlay_image: /financial_independence/finance.jpg
   caption: "Photo credit: [**baystreet**]"
 ---
 
