--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: splash
 header:
-  image: /assets/images/main.jpg
+  overlay_image: /assets/images/main.jpg
   caption: "Photo credit: [**wallpapersite**]"
 ---
 
