--- a/photography/index.html
+++ b/photography/index.html
@@ -3,7 +3,7 @@ layout: archive
 permalink: /photography/
 author_profile: true
 header:
-  image: /photography/photography.jpg
+  overlay_image: /photography/photography.jpg
 ---
 
 <div class="grid__wrapper">
