--- a/data_analytics/index.html
+++ b/data_analytics/index.html
@@ -10,7 +10,7 @@ header:
 {% include group-by-array collection=site.posts field="categories" %}
 
 {% for category in group_names %}
-  {% if category == "data analytics" %}
+  {% if category == "data_analytics" %}
     {% assign posts = group_items[forloop.index0] %}
     <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
     {% for post in posts %}
