Upload Digit Recogniser post

--- a/data analytics/index.html
+++ b/data analytics/index.html
@@ -1,9 +1,9 @@
 ---
 layout: archive
-permalink: /data_analytics/
+permalink: /data analytics/
 author_profile: true
 header:
-  overlay_image: /data_analytics/data.jpg
+  overlay_image: /data analytics/data.jpg
   caption: "Photo credit: [**gamesdeveloper.today**]"
 ---
 
