--- a/DA/index.html
+++ b/DA/index.html
@@ -1,16 +1,16 @@
 ---
 layout: archive
-permalink: /data analytics/
+permalink: /DA/
 author_profile: true
 header:
-  overlay_image: /data analytics/data.jpg
+  overlay_image: /DA/data.jpg
   caption: "Photo credit: [**gamesdeveloper.today**]"
 ---
 
 {% include group-by-array collection=site.posts field="categories" %}
 
 {% for category in group_names %}
-  {% if category == "data analytics" %}
+  {% if category == "DA" %}
     {% assign posts = group_items[forloop.index0] %}
     <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
     {% for post in posts %}
