--- a/finance/index.html
+++ b/finance/index.html
@@ -1,16 +1,16 @@
 ---
 layout: archive
-permalink: /financial independence/
+permalink: /finance/
 author_profile: true
 header:
-  overlay_image: /financial independence/finance.jpg
+  overlay_image: /finance/finance.jpg
   caption: "Photo credit: [**baystreet**]"
 ---
 
 {% include group-by-array collection=site.posts field="categories" %}
 
 {% for category in group_names %}
-  {% if category == "financial independence" %}
+  {% if category == "finance" %}
     {% assign posts = group_items[forloop.index0] %}
     <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
     {% for post in posts %}
