--- a/fun/index.html
+++ b/fun/index.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-permalink: /random/
+permalink: /fun/
 author_profile: true
 header:
   overlay_image: /random/random.jpg
@@ -10,7 +10,7 @@ header:
 {% include group-by-array collection=site.posts field="categories" %}
 
 {% for category in group_names %}
-	{% if category == "random" %}
+	{% if category == "fun" %}
 	  {% assign posts = group_items[forloop.index0] %}
 	  <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
 	  {% for post in posts %}
