--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@ header:
   caption: "Photo credit: [**wallpapersite**]"
 ---
 
+<form action="/search.html" method="get">
+  <label for="search_box">Search</label>
+  <input type="text" id="search_box" name="query">
+  <input type="submit" value="search">
+</form>
+
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
 {% for post in paginator.posts %}
