add search function lunr

--- a/search.html
+++ b/search.html
@@ -23,5 +23,5 @@ layout: search
     {% endfor %}
   };
 </script>
-<script src="/js/plugins/lunr.min.js"></script>
-<script src="/js/plugins/search.js"></script>
+<script src="/assets/js/plugins/lunr.min.js"></script>
+<script src="/assets/js/plugins/search.js"></script>
