add search function lunr

--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@ title: Blog
 	<h2 class="spacing">Blog</h2>
 
 	<div class="blog-posts">
-		{% for post in site.posts %}
+		{% for post in fun.posts %}
 			<div class="blog-post spacing">
 				<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
 				<p class="summary">
