--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ header:
   caption: "Photo credit: [**wallpapersite**]"
 ---
 
-<form action="/search.html" method="get">
+<form action="/search" method="get">
   <label for="search_box">Search</label>
   <input type="text" id="search_box" name="query">
   <input type="submit" value="search">
