--- a/_pages/search.html
+++ b/_pages/search.html
@@ -24,5 +24,5 @@ permalink: /search/
     {% endfor %}
   };
 </script>
-<script src="/assets/js/plugins/lunr.min.js"></script>
-<script src="/assets/js/plugins/search.js"></script>
+<script src="/js/lunr.min.js"></script>
+<script src="/js/search.js"></script>
