--- a/_pages/search.html
+++ b/_pages/search.html
@@ -23,6 +23,7 @@ permalink: /search/
       {% unless forloop.last %},{% endunless %}
     {% endfor %}
   };
+  console.log(window.store)
 </script>
 <script src="/js/lunr.min.js"></script>
 <script src="/js/search.js"></script>
