--- a/_pages/search.html
+++ b/_pages/search.html
@@ -10,27 +10,19 @@ permalink: /search/
 
 <ul id="search-results"></ul>
 
-{% include group-by-array collection=site.posts field="categories" %}
-
 <script>
-  {% for category in group_names %}
-    {% if category == "fun" %}
-      {% assign posts = group_items[forloop.index0] %}
-      window.store = {
-        {% for post in posts %}
-          "{{ post.url | slugify }}": {
-            "title": "{{ post.title | xml_escape }}",
-            "author": "{{ post.author | xml_escape }}",
-            "category": "{{ post.category | xml_escape }}",
-            "content": {{ post.content | strip_html | strip_newlines | jsonify }},
-            "url": "{{ post.url | xml_escape }}"
-          }
-          {% unless forloop.last %},{% endunless %}
-        {% endfor %}
-      };
-    {% endif %}
-  {% endfor %}  
-  console.log(window.store)
+  window.store = {
+    {% for post in site.posts %}
+      "{{ post.url | slugify }}": {
+        "title": "{{ post.title | xml_escape }}",
+        "author": "{{ post.author | xml_escape }}",
+        "category": "{{ post.category | xml_escape }}",
+        "content": {{ post.content | strip_html | strip_newlines | jsonify }},
+        "url": "{{ post.url | xml_escape }}"
+      }
+      {% unless forloop.last %},{% endunless %}
+    {% endfor %}
+  };
 </script>
 <script src="/js/lunr.min.js"></script>
 <script src="/js/search.js"></script>
