Add Adsense to all html

--- a/fun/index.html
+++ b/fun/index.html
@@ -3,10 +3,18 @@ layout: archive
 permalink: /fun/
 author_profile: true
 header:
-  overlay_image: /random/random.jpg
+  overlay_image: /fun/random.jpg
   caption: "Photo credit: [**nelson**]"
 ---
-
+<head>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-8241314451378836",
+      enable_page_level_ads: true
+    });
+  </script>
+</head>
 {% include group-by-array collection=site.posts field="categories" %}
 
 {% for category in group_names %}
