--- a/Coding/index.html
+++ b/Coding/index.html
@@ -1,16 +1,24 @@
 ---
 layout: archive
-permalink: /DA/
+permalink: /Coding/
 author_profile: true
 header:
-  overlay_image: /DA/data.jpg
+  overlay_image: /Coding/data.jpg
   caption: "Photo credit: [**gamesdeveloper.today**]"
 ---
-
+<head>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-8241314451378836",
+      enable_page_level_ads: true
+    });
+  </script>
+</head>
 {% include group-by-array collection=site.posts field="categories" %}
 
 {% for category in group_names %}
-  {% if category == "DA" %}
+  {% if category == "Coding" %}
     {% assign posts = group_items[forloop.index0] %}
     <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
     {% for post in posts %}
