--- a/photography/index.html
+++ b/photography/index.html
@@ -5,7 +5,15 @@ author_profile: true
 header:
   overlay_image: /photography/photography.jpg
 ---
-
+<head>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-8241314451378836",
+      enable_page_level_ads: true
+    });
+  </script>
+</head>
 <div class="grid__wrapper">
   {% for post in site.photogrpahy %}
     {% include archive-single.html type="grid" %}
