Change home page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: home
+title: Doraemon's Blog
+excerpt: "A blog where I share stuffs on Coding, Finance and some random stuffs I find on the Internet"
 header:
   overlay_image: /assets/images/main.jpg
   caption: "Photo credit: [**wallpapersite**]"
