--- a/TP/index.html
+++ b/TP/index.html
@@ -10,18 +10,21 @@ author_profile: true
     Here I outline the Privacy Policy for this site with regards to the personal information that is received and collected and how it will be 
     used. 
     <br />
+    <br />
     First and foremost, no sharing of personal information to anyone without your direct consent.
 </body>
 
 <h2>Cookies and Web Beacons</h2>
 <body>
     When you visit this site “convenience” cookies are stored on your computer when you submit a comment to help you log in faster to Disqus 
-    the next time you leave a comment.<br />
-    
+    the next time you leave a comment.
+    <br />
+    <br />
     Third-party advertisers may also place and read cookies on your browser and/or use web beacons to collect information. This site has no 
     access or control over these cookies. You should review the respective privacy policies on any and all third-party ad servers for more 
-    information regarding their practices and how to opt-out.<br />
-
+    information regarding their practices and how to opt-out.
+    <br />
+    <br />
     If you wish to disable cookies, you may do so through your web browser options. Instructions for doing so can be found on the specific 
     web browsers’ websites.
 </body>
@@ -31,6 +34,7 @@ author_profile: true
     Google Analytics is a web analytics tool I use to help understand how visitors engage with this website. It reports website trends using 
     cookies and web beacons without identifying individual visitors. You can read <a href="http://www.google.com/analytics/learn/privacy.html">Google Analytics Privacy Policy</a>.
     <br />
+    <br />
     Google Adsense, a third party affiliate marketing network, uses cookies to help make sure I get a commission when you buy a product after 
     clicking on a link or ad banner that takes you to the site of one of their merchants. You can read <a href="http://support.google.com/adsense/bin/answer.py?hl=en&answer=48182">Google Adsense Privacy Policy</a>.
 </p>
@@ -39,6 +43,7 @@ author_profile: true
 <p>
     I make money on this website through affiliate programs. If you click an affiliate link or ad banner and buy the product, you help 
     support this website because I’ll get a percentage of that sale.
+    <br />
     <br />
     Currently I’m an affiliate for Google Adsense.
 </p>
