--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ excerpt: "A blog where I share stuffs on Coding, Finance and some random stuffs 
 header:
   overlay_image: /assets/images/main.jpg
   caption: "Photo credit: [**wallpapersite**]"
+author_profile: true
 ---
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
